--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "archiver": "^0.11.0",
     "express": "^4.9.4",
+    "fs-extra": "^0.12.0",
     "fstream": "^1.0.2",
     "glob": "^4.0.6",
     "minimist": "^1.1.0",
