Added jshint as mocha test and fixed various jshint related issues.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "chai": "^1.9.1",
     "mocha": "^1.21.4",
+    "mocha-jshint": "0.0.9",
     "supertest": "^0.13.0"
   },
   "dependencies": {
