--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "supertest": "^0.13.0"
   },
   "dependencies": {
-    "archiver": "^0.11.0",
     "express": "^4.9.4",
     "fs-extra": "^0.12.0",
-    "fstream": "^1.0.2",
     "glob": "^4.0.6",
     "minimist": "^1.1.0",
+    "shelljs": "^0.3.0",
     "sprintf": "^0.1.4",
-    "tmp": "0.0.24",
-    "unzip": "^0.1.11"
+    "tar-fs": "^1.2.0",
+    "tmp": "0.0.24"
   }
 }
