Introduced temporary server fixture.
Introduced unit test simulating an error using sinon.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "glob": "^4.0.6",
     "minimist": "^1.1.0",
     "shelljs": "^0.3.0",
+    "sinon": "^1.14.1",
     "sprintf": "^0.1.4",
     "tar-fs": "^1.2.0",
     "tmp": "0.0.24"
